terraform/deployments/cluster-services/modules/gatekeeper/test/suite/samples/ingress_hostname_length/deny_long_hostname/case.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-0
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    external-dns.alpha.kubernetes.io/set-identifier: ing-0-default-blue
spec:
  rules:
  - host: this-label-is-too-long-to-be-a-label-it-is-over-permitted-route53-length.apps.live.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port:
              number: 80
